@@ -2,4 +2,4 @@
 
 EXTRA_DIST = BUGS libzvbi.spec.in libzvbi.spec autogen.sh depcomp
 
-SUBDIRS = src po test doc
+SUBDIRS = src po test doc intl
