@@ -1,5 +1,5 @@
 dnl Process this file with autoconf to produce a configure script.
-dnl $Id: configure.in,v 1.1.1.1 2002-01-12 16:18:06 mschimek Exp $
+dnl $Id: configure.in,v 1.2 2002-01-17 19:55:22 garetxe Exp $
 
 AC_INIT(configure.in)
 AM_INIT_AUTOMAKE(libzvbi, 0.1)
@@ -109,9 +109,16 @@ dnl
 AC_OUTPUT([
 Makefile
 src/Makefile
+intl/Makefile
 po/Makefile.in
 po/Makefile
 test/Makefile
 libzvbi.spec
 doc/Makefile
 ])
+
+if test ! -r po/Makefile; then
+	PF="POT"
+	PF=$PF"FILES"
+        sed -e "/$PF =/r po/PF" po/Makefile.in > po/Makefile
+fi
